Fixed NavBar title wrapping

--- a/src/components/MainHeader/index.less
+++ b/src/components/MainHeader/index.less
@@ -1,2 +1,8 @@
 .mainHeader {
 }
+
+.title {
+  overflow: hidden ;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
